# Occupied-Place-Description

./: CMakeLists.txt  README.md  package.xml
dataset_player/: CMakeLists.txt  play_kitti.cpp  play_mulran.cpp
include/: for_cloud.hpp  for_desc.hpp  for_io.hpp  for_time.hpp
launch/: collect_database.launch  locate_kitti.launch  locate_mulran.launch  mapping_kitti.launch  mapping_mulran.launch  play_kitti.launch  play_mulran.launch
offline_mapping/: CMakeLists.txt  collect_database.cpp  mapping.cpp
offline_mapping/linefit/: CMakeLists.txt  bin.h  ground_segmentation.h  segment.h
online_localization/: CMakeLists.txt  realtime_locate.cpp
rviz_cfg/: locate.rviz  mapping.rviz
